compilation: fix bad stamping w8 64 release
Signed-off-by: Nathan Gauer <nathan.gauer@gmail.com>

--- a/viogpudo/viogpudo.vcxproj
+++ b/viogpudo/viogpudo.vcxproj
@@ -299,7 +299,7 @@
       <PreprocessorDefinitions>_WIN64;_AMD64_;AMD64;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Inf>
-      <SpecifyDriverVerDirectiveDate>false</SpecifyDriverVerDirectiveDate>
+      <SpecifyDriverVerDirectiveDate>true</SpecifyDriverVerDirectiveDate>
     </Inf>
     <Inf>
       <KmdfVersionNumber />
