viogpudo: support QXL custom resolution escape
SPICE vdagent uses this escape command to set custom resolutions. Even
though VirtIO has its own mechanism via VIRTIO_GPU_EVENT_DISPLAY, it
is prone to race condition when vdagent calls `SetDisplayConfig` to
choose the new mode.

--- a/viogpudo/viogpudo.vcxproj
+++ b/viogpudo/viogpudo.vcxproj
@@ -445,6 +445,7 @@
     <ClInclude Include="bitops.h" />
     <ClInclude Include="driver.h" />
     <ClInclude Include="helper.h" />
+    <ClInclude Include="qxl_escape.h" />
     <ClInclude Include="viogpu.h" />
     <ClInclude Include="viogpudo.h" />
     <ClInclude Include="resource.h" />
