--- a/viogpudo/viogpudo.vcxproj.filters
+++ b/viogpudo/viogpudo.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="viogpu_queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="qxl_escape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="viogpudo.rc">
